Added titles, site icon & metadata

--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="An online-multiplayer, modified version of BlackJack.">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <title>RiskJack</title>
+    <meta name="author" content="QuevDev" />
+    <meta
+      name="description"
+      content="An unpredictable, online multiplayer card game featuring a modified version of BlackJack."
+    />
+
+    <!-- TODO: Update 'og:url' when site is deployed -->
+    <meta property="og:title" content="Riskjack" />
+    <meta property="og:url" content="https://github.com/quev-dev/riskjack" />
+    <meta
+      property="og:description"
+      content="An unpredictable, online multiplayer card game featuring a modified version of BlackJack."
+    />
+
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <title>Riskjack</title>
   </head>
   <body>
     <div id="root"></div>
